--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,5 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 cpython = { version = "0.7", features = ["extension-module"] }
 rand = "0.8"
-serde = { version = "1.0", features = ["derive"] }
+serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
