--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "blau"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["CJ Carey <perimosocordiae@gmail.com>"]
 edition = "2021"
 
@@ -9,7 +9,7 @@ name = "blau"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-cpython = { version = "0.7", features = ["extension-module"] }
+cpython = { version = "0.7", features = ["extension-module"], optional = true }
 rand = "0.8"
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
