--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "blau"
-version = "0.1.3"
+version = "0.1.4"
 authors = ["CJ Carey <perimosocordiae@gmail.com>"]
 edition = "2024"
 
@@ -9,6 +9,7 @@ name = "blau"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
+blau_api = { git = "https://github.com/perimosocordiae/blau_api" }
 cpython = { version = "0.7", features = ["extension-module"], optional = true }
 rand = "0.9"
 serde = { version = "1", features = ["derive", "rc"] }
